Fix : changed gif

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
         <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
 
-        <img class="hover-gif" src="gifs/BaddoolGif.gif" alt="Hover GIF">
+        <img class="hover-gif" src="R.gif" alt="Hover GIF">
 
         <div class="overlay-text">
              <h1>BadDool</h1> 
@@ -46,8 +46,6 @@
         <img src="images/image2.png">
         <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
         <img class="hover-gif" src="R.gif" alt="Hover GIF"> 
-
-        <img class="hover-gif" src="gifs/WurmholeGif.gif" alt="Hover GIF">
 
         <div class="overlay-text">
             <h1>Wurmhole</h1> 
