Feature : Mario like background on maincard

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <div class="maincard-container">
 
         <div class="maincard" onclick="selectCard(1)">
-    
             <img src="images/beige.jpg">
             <img class="portrait" src="images/portrait.jpg" alt="Overlay Image 1">
-    
+            <img class="moving-image-maincard" src="images/dotoverlay.jpg" alt="Moving Image">
             <div class="overlay-text">
                 <h1>Robin Zeitlin</h1> 
                  <h2>About me</h2>
