Fix : Scaling website now works

--- a/index.html
+++ b/index.html
@@ -10,16 +10,28 @@
     
     <!--cards on screen-->
 <div>
+    <div class="screen-container">
+        <img class="overlay-image-socials" src="images/LinkedIn.png">
+    </div>
+</div>
+
+<div>
     <div class="maincard-container">
 
-        <div class="maincard" onclick="selectCard(1)">
+        <div class="maincard">
             <img src="images/beige.jpg">
             <img class="portrait" src="images/portrait.jpg" alt="Overlay Image 1">
-            <img class="moving-image-maincard" src="images/dotoverlay.jpg" alt="Moving Image">
-            <div class="overlay-text">
-                <h1>Robin Zeitlin</h1> 
-                 <h2>About me</h2>
-                <p>  Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test.   </p>
+            <img class="moving-image-maincard" src="images/overlay.jpg" alt="Moving Image">
+            <div class="overlay-text-visible" opacity>
+                <h1 style="color: bisque; "> Robin Zeitlin</h1> 
+                <p> Heya! Im a Programmer currently studying at FutureGames. Seeking oppurtunities to contribute to game projects, learn new things and gain valueable experience. </p>
+                <h3 style="color: bisque; "> Languages</h3>
+                <p> • C#</p>
+                <p> • C++</p>
+                <p> • Html</p>
+                <p> • Css</p>
+                <h3 style="color: bisque; ">Engines</h3>
+                <p> • Unity </p>
            </div>
         </div>
     </div>
@@ -37,7 +49,13 @@
         <div class="overlay-text">
              <h1>BadDool</h1> 
              <h2>6 👥</h2>
-             <p>  Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test.   </p>
+             <p style="padding-left:10px; padding-right:10px;"> First Steam Release. A 3 month project where I was Programmer and Product Owner. The game succesfully released 2024 Q1 on Steam.</p>
+             <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
+             <p style="text-align:left; padding-left:10px;"> • Procedural Dungeon Generation</p>
+             <p style="text-align:left; padding-left:10px;"> • Dialogue</p>
+             <p style="text-align:left; padding-left:10px;"> • Interaction</p>
+             <p style="text-align:left; padding-left:10px;"> • NPC/Enemy logic</p> 
+             <p style="text-align:left; padding-left:10px;"> • Player Logic</p>
         </div>
     </div>
 
@@ -49,7 +67,10 @@
         <div class="overlay-text">
             <h1>Wurmhole</h1> 
              <h2>2 👥</h2>
-            <p>  Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test.   </p>
+             <p style="padding-left:10px; padding-right:10px;"> A very small project made during a 2 week period. This project was created with hopes of pitching at the Swedish Game Conference 2023.</p>
+             <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
+             <p style="text-align:left; padding-left:10px;"> • Ship Building system</p>
+             <p style="text-align:left; padding-left:10px;"> • Load unique Enemies from Json file</p>
        </div>
     </div>
 
@@ -61,7 +82,10 @@
         <div class="overlay-text">
             <h1>Overdosed</h1> 
              <h2>13 👥</h2>
-            <p>  Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test.   </p>
+             <p style="padding-left:10px; padding-right:10px;"> This project was made during a 3 week period for FutureGames Game Project 1. Our teams theme was "Biomedical builders".</p>
+             <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
+             <p style="text-align:left; padding-left:10px;"> • Player Movement</p>
+             <p style="text-align:left; padding-left:10px;"> • All the UI</p>
        </div>
     </div>
 
@@ -74,7 +98,9 @@
         <div class="overlay-text">
             <h1>Island Generation</h1> 
              <h2>1 👥</h2>
-            <p>  Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test. Test.   </p>
+             <p style="padding-left:10px; padding-right:10px;"> This is a Procedural Island Generation system. When making this project I decided to look into Addressables and base the generation on overlaying Perlin-noises.</p>
+             <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
+             <p style="text-align:left; padding-left:10px;"> • Literally everything
        </div>
     </div>
     
