Feature : Started on the clicked in Information site

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="maincard">
             <img src="images/beige.jpg">
             <img class="portrait" src="images/portrait.jpg" alt="Overlay Image 1">
-            <img class="moving-image-maincard" src="images/overlay.jpg" alt="Moving Image">
+            <img class="moving-image-maincard" src="images/overlay.jpg">
             <div class="overlay-text-visible" opacity>
                 <h1 style="color: bisque; "> Robin Zeitlin</h1> 
                 <p> Heya! Im a Programmer currently studying at FutureGames. Seeking oppurtunities to contribute to game projects, learn new things and gain valueable experience. </p>
