Feature : Box of information and video by URL

--- a/baddool.html
+++ b/baddool.html
@@ -12,8 +12,9 @@
             <img src="images/beige.jpg">
             <img class="moving-image-background" src="images/overlay.jpg">
             <div class="information-container" opacity>
-                <h1>Hello</h1>
-                <p> Hello!</p>
+                <div class="smallContainer" opacity>
+                    <iframe width="80%" height="80%" src="https://www.youtube.com/embed/X9Dtb_4os1o?si=MRqlN9cFfCVcFIuh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
             </div>
         </div>
     </body>
