Feature : fonts, videos and more "peeky" icons.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    
     <title>Robin Zeitlin</title>
     <style>
         /* Scrollbar styling for WebKit browsers */
@@ -89,7 +90,7 @@
         </div>
     </div>
 
-    <div class="card 1" onclick="redirectTo('baddool.html')">
+    <div class="card 1" onclick="redirectTo('wurmhole.html')">
         <img src="images/image2.png">
         <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
         <img class="hover-gif" src="R.gif" alt="Hover GIF"> 
@@ -104,7 +105,7 @@
        </div>
     </div>
 
-    <div class="card 1" onclick="redirectTo('baddool.html')">
+    <div class="card 1" onclick="redirectTo('overdosed.html')">
         <img src="images/image3.png">
         <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
         <img class="hover-gif" src="R.gif" alt="Hover GIF">
@@ -119,7 +120,7 @@
        </div>
     </div>
 
-    <div class="card 1" onclick="redirectTo('baddool.html')">
+    <div class="card 1" onclick="redirectTo('islandproject.html')">
         <img src="images/image4.png">
         <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
         <img class="overlay-image-available" src="images/github_logo.png" alt="Overlay Image 1">
