--- a/islandproject.html
+++ b/islandproject.html
@@ -55,7 +55,7 @@
             <img class="moving-image-background" src="images/overlay.jpg">
 
             <div class="title-text"> 
-              <h1 class="seymour-one-font"> BadDool</h1>
+              <h1 class="seymour-one-font"> Island</h1>
             </div>
 
                 <div class="smallContainer" opacity>
