--- a/wurmhole.html
+++ b/wurmhole.html
@@ -55,13 +55,13 @@
             <img class="moving-image-background" src="images/overlay.jpg">
 
             <div class="title-text"> 
-              <h1 class="seymour-one-font"> BadDool</h1>
+              <h1 class="seymour-one-font"> Wurmhole</h1>
             </div>
 
                 <div class="smallContainer" opacity>
-                  <img class="easter-egg" src="images/PeekyGoblin.png">
+                  <img class="easter-egg" src="images/PeekyShip.png">
                     <div class="video" opacity>
-                    <iframe width="100%" height="90%" src="https://www.youtube.com/embed/X9Dtb_4os1o?si=MRqlN9cFfCVcFIuh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="100%" height="90%"src="https://www.youtube.com/embed/ezsVKbffqGk?si=T83NH1r51lNTw3vL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <div class="text-under-video">
 
                         <h2 class="oswald-font">HEADER 1</h2>
