--- a/index.html
+++ b/index.html
@@ -40,22 +40,24 @@
 <body>
     
     <!--cards on screen-->
+<!--
 <div>
     <div class="screen-container">
         <img class="overlay-image-socials" src="images/LinkedIn.png">
     </div>
 </div>
+-->
 
 <div>
     <div class="maincard-container">
 
-        <div class="maincard">
+        <div class="maincard" onclick="redirectTo('aboutme.html')">
             <img src="images/beige.jpg">
             <img class="portrait" src="images/portrait.jpg" alt="Overlay Image 1">
             <img class="moving-image-maincard" src="images/overlay.jpg">
             <div class="overlay-text-visible" opacity>
                 <h1 style="color: bisque; "> Robin Zeitlin</h1> 
-                <p> Heya! Im a Programmer currently studying at FutureGames. Seeking oppurtunities to contribute to game projects, learn new things and gain valueable experience. </p>
+                <p> Im a Programmer currently studying at FutureGames. Seeking oppurtunities to contribute to game projects, learn new things and gain valueable experience. </p>
                 <h3 style="color: bisque; "> Languages</h3>
                 <p> • C#</p>
                 <p> • C++</p>
@@ -75,8 +77,6 @@
         <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
         <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
 
-        <img class="hover-gif" src="R.gif" alt="Hover GIF">
-
         <div class="overlay-text">
              <h1>BadDool</h1> 
              <h2>6 👥</h2>
@@ -93,7 +93,6 @@
     <div class="card 1" onclick="redirectTo('wurmhole.html')">
         <img src="images/image2.png">
         <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
-        <img class="hover-gif" src="R.gif" alt="Hover GIF"> 
 
         <div class="overlay-text">
             <h1>Wurmhole</h1> 
@@ -108,7 +107,6 @@
     <div class="card 1" onclick="redirectTo('overdosed.html')">
         <img src="images/image3.png">
         <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
-        <img class="hover-gif" src="R.gif" alt="Hover GIF">
 
         <div class="overlay-text">
             <h1>Overdosed</h1> 
@@ -124,7 +122,6 @@
         <img src="images/image4.png">
         <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
         <img class="overlay-image-available" src="images/github_logo.png" alt="Overlay Image 1">
-        <img class="hover-gif" src="R.gif" alt="Hover GIF">
 
         <div class="overlay-text">
             <h1>Island Generation</h1> 
