Feature : Drop down boxes

--- a/baddool.html
+++ b/baddool.html
@@ -38,13 +38,12 @@
         }
 
         .oswald-font {
-        font-family: 'Oswald', sans-serif;
+          font-family: 'Oswald', sans-serif;
         }
 
         .seymour-one-font {
-        font-family: 'Seymour One', sans-serif;
+          font-family: 'Seymour One', sans-serif;
         }
-
       </style>
 </head>
 <div>
@@ -61,37 +60,37 @@
                 <div class="smallContainer" opacity>
                   <img class="easter-egg" src="images/PeekyGoblin.png">
                     <div class="video" opacity>
-                    <iframe width="100%" height="90%" src="https://www.youtube.com/embed/X9Dtb_4os1o?si=MRqlN9cFfCVcFIuh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <iframe width="100%" height="90%" src="https://www.youtube.com/embed/Zt0c8hgHwnQ?si=OmZgZQsH0w7f1f_v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <div class="text-under-video">
 
-                        <h2 class="oswald-font">HEADER 1</h2>
-                        <p class="oswald-font">Text TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT.</p>
-                        <div class="text-image">
-                            <img src="images/portrait.jpg">
+                      <div class="box-container">
+                        <div class="box">
+                            <p class="oswald-font"> ⬇ Dungeon Generation</p>
+                            <div class="hidden-text">
+                                <h2 class="oswald-font">HEADER 1</h2>
+                                <p class="oswald-font">Text TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT.</p>
+                                <div class="text-image">
+                                    <img src="images/portrait.jpg">
+                                </div>
+                            </div>
                         </div>
-
-                        <h2 class="oswald-font">HEADER 2</h2>
-                        <p class="oswald-font">TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT.</p>
-                        <div class="text-image">
-                            <img src="images/portrait.jpg">
+                
+                        <div class="box">
+                            <p class="oswald-font"> ⬇ NPC Interaction and State Machine</p>
+                            <div class="hidden-text">
+                                <h2 class="oswald-font">HEADER 2</h2>
+                                <p class="oswald-font">More text for the second box.</p>
+                                <div class="text-image">
+                                    <img src="images/another-image.jpg">
+                                </div>
+                            </div>
                         </div>
-
-                        <h2 class="oswald-font">HEADER 3</h2>
-                        <p class="oswald-font">TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT.</p>
-                        <div class="text-image">
-                            <img src="images/portrait.jpg">
-                        </div>
-
-                        <h2 class="oswald-font">Summary</h2>
-                        <p class="oswald-font">TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT.</p>
-                        <div class="text-image">
-                            <img src="images/portrait.jpg">
-                        </div>
-
+                  
                         <h2 class="oswald-font"; style="text-align:center">Thank you for reading.</h2>
                     </div>  
             </div>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
 
