Feature : Caviar dev diary and Baddol strucutre.

--- a/index.html
+++ b/index.html
@@ -90,16 +90,14 @@
         </div>
     </div>
 
-    <div class="card 1" onclick="redirectTo('baddool.html')">
-      <img src="images/pitchBlack.png">
+    <div class="card 1" onclick="redirectTo('Caviar.html')">
+      <img src="images/Caviar.png">
       <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
-      <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
 
       <div class="overlay-text">
-           <h1>Caviar</h1> 
+          <h1>Caviar</h1> 
            <h2>?? 👥</h2>
-           <p style="padding-left:10px; padding-right:10px;"> The Photograph fish game.</p>
-      </div>
+     </div>
   </div>
 
     <div class="card 1" onclick="redirectTo('wurmhole.html')">
