Feature : Code Snippets

--- a/baddool.html
+++ b/baddool.html
@@ -64,7 +64,6 @@
             </div>
 
                 <div class="smallContainer" opacity>
-                  <img class="easter-egg" src="images/PeekyGoblin.png">
                     <div class="video" opacity>
                       <iframe width="100%" height="90%" src="https://www.youtube.com/embed/Zt0c8hgHwnQ?si=OmZgZQsH0w7f1f_v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <div class="text-under-video">
@@ -93,6 +92,12 @@
                                 <h2 class="oswald-font">Procedural Dungeon Generation</h2>
                                 <p class="oswald-font">I am extremely fascinated by Procedural Generation and more specifically Procedural World Generation. It changes the whole feeling of the game and it makes it possible for smaller indie games have big worlds.</p>
                                 <p class="oswald-font"> First iteration :  </p>
+                                <div class="code-snippet">
+                                  <button class="copy-btn" onclick="copyCode()">Copy</button>
+                                  <pre><code id="codeBlock">
+                                    Create Dungeon
+                                  </code></pre>
+                                </div>
                                 <p class="oswald-font"> Secound iteration :  </p>
                                 <p class="oswald-font"> Third iteration :  </p>
                                 <p class="oswald-font"> Final iteration :  </p>
