Feature : Caviar dev diary and eating Documentation.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="maincard" onclick="redirectTo('aboutme.html')">
             <img src="images/beige.jpg">
             <img class="portrait" src="images/portrait.jpg" alt="Overlay Image 1">
-            <img class="moving-image-maincard" src="images/overlay.jpg">
+            <img class="moving-image-maincard" src="images/overlay.png">
             <div class="overlay-text-visible" opacity>
                 <h1 style="color: bisque; "> Robin Zeitlin</h1> 
                 <p> Im a Programmer currently studying at FutureGames. Seeking oppurtunities to contribute to game projects, learn new things and gain valueable experience. </p>
