--- a/caviar.html
+++ b/caviar.html
@@ -75,6 +75,13 @@
                                     <img src="images/Caviar/Day2.png">
                                 </div>
 
+                                <h2 class="oswald-font">Day 3</h2>
+                                <p class="oswald-font">I spent a lot of time developing something I think is extremely exciting and a little bit over engineered today. I store object types in enum variables and then compare those with a hash-table. Using the enums as keys lets me grab the correct contains meshes and materials easily. I then also added a button to the inspector to call the function if pressed. </p>
+                                <p class="oswald-font">The point of me making the system this way is that instead of having 20 prefabs of every food type, I will instead be able to simply spawn the same prefab for every type of food and then just change the enum on the script on the GameObject.</p>
+                                <div class="text-image">
+                                    <img src="images/Caviar/Day3.png">
+                                </div>
+
                             </div>
                         </div>
 
