Reskin : Changed color pallette, cleared up som stuff and is now ready to start writing.
Please fix the drop down boxes, thank you.

--- a/baddool.html
+++ b/baddool.html
@@ -59,8 +59,8 @@
             <img src="images/beige.jpg">
             <img class="moving-image-background" src="images/overlay.jpg">
 
-            <div class="title-text"> 
-              <h1 class="seymour-one-font"> BadDool</h1>
+            <div class="vertical-text">
+              Made by Robin.
             </div>
 
                 <div class="smallContainer" opacity>
@@ -72,7 +72,7 @@
                       <div class="box-container">
 
                         <div class="box">
-                          <p class="oswald-font">Description</p>
+                          <h2 class="oswald-font">Description</h2>
                           <div class="hidden-text">
 
                             <h2 class="oswald-font">Description</h2>
@@ -86,7 +86,7 @@
 
 
                         <div class="box">
-                            <p class="oswald-font">Procedural Dungeon Generation</p>
+                            <h2 class="oswald-font">Procedural Dungeon Generation</h2>
                             <div class="hidden-text">
 
                                 <h2 class="oswald-font">Procedural Dungeon Generation</h2>
@@ -105,12 +105,20 @@
                         </div>
                 
                         <div class="box">
-                            <p class="oswald-font">NPC Interaction and State Machine</p>
+                            <h2 class="oswald-font">NPC Interaction and State Machine</h2>
                             <div class="hidden-text">
                                 <h2 class="oswald-font">HEADER 2</h2>
                                 <p class="oswald-font">More text for the second box.</p>
                             </div>
                         </div>
+
+                        <div class="box">
+                          <h2 class="oswald-font">Steam stuff</h2>
+                          <div class="hidden-text">
+                              <h2 class="oswald-font">HEADER 2</h2>
+                              <p class="oswald-font">More text for the second box.</p>
+                          </div>
+                      </div>
                   
                         <h2 class="oswald-font"; style="text-align:center">Thank you for reading.</h2>
                     </div>  
