--- a/index.html
+++ b/index.html
@@ -50,22 +50,24 @@
 
 <div>
     <div class="maincard-container">
-
-        <div class="maincard" onclick="redirectTo('aboutme.html')">
+        <div class="maincard">
             <img src="images/beige.jpg">
             <img class="portrait" src="images/portrait.jpg" alt="Overlay Image 1">
             <img class="moving-image-maincard" src="images/overlay.png">
             <div class="overlay-text-visible" opacity>
-                <h1 style="color: bisque; "> Robin Zeitlin</h1> 
+                <h1 style="color: #F27059; "> Robin Zeitlin</h1> 
                 <p> Im a Programmer currently studying at FutureGames. Seeking oppurtunities to contribute to game projects, learn new things and gain valueable experience. </p>
-                <h3 style="color: bisque; "> Languages</h3>
+                <h3 style="color: #F27059; "> Languages</h3>
                 <p> • C#</p>
                 <p> • C++</p>
                 <p> • Html</p>
                 <p> • Css</p>
-                <h3 style="color: bisque; ">Engines</h3>
+                <h3 style="color: #F27059; ">Engines</h3>
                 <p> • Unity </p>
            </div>
+        <div class="aboutmetext">
+          <p style="color:#0051ff"> about me</p>
+        </div>
         </div>
     </div>
 </div>
@@ -82,6 +84,7 @@
              <h2>6 👥</h2>
              <p style="padding-left:10px; padding-right:10px;"> First Steam Release. A 3 month project where I was Programmer and Product Owner. The game succesfully released 2024 Q1 on Steam.</p>
              <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
+             <p style="text-align:left; padding-left:10px;"> • Steam Integration + Leaderboard</p>
              <p style="text-align:left; padding-left:10px;"> • Procedural Dungeon Generation</p>
              <p style="text-align:left; padding-left:10px;"> • Dialogue</p>
              <p style="text-align:left; padding-left:10px;"> • Interaction</p>
@@ -90,58 +93,36 @@
         </div>
     </div>
 
-    <div class="card 1" onclick="redirectTo('Caviar.html')">
-      <img src="images/Caviar.png">
-      <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
 
-      <div class="overlay-text">
-          <h1>Caviar</h1> 
-           <h2>?? 👥</h2>
-     </div>
-  </div>
 
-    <div class="card 1" onclick="redirectTo('wurmhole.html')">
-        <img src="images/image2.png">
-        <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
+  <div class="card 2" onclick="redirectTo('Caviar.html')">
+    <img src="images/Caviar.png">
+    <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
+    <div class="overlay-text">
+        <h1>Caviar</h1> 
+         <h2>Solo (With Colaboration) 👥</h2>
+         <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
+         <p style="text-align:left; padding-left:10px;"> • Steam Integration</p>
+         <p style="text-align:left; padding-left:10px;"> • AI logic</p>
+         <p style="text-align:left; padding-left:10px;"> • Procedural Generation</p>
+         <p style="text-align:left; padding-left:10px;"> • Camera Mechanic</p>
+         <p style="text-align:left; padding-left:10px;"> • Player Movement</p>
+         <p style="text-align:left; padding-left:10px;"> • (everything else)</p>
+   </div>
+</div>
 
-        <div class="overlay-text">
-            <h1>Wurmhole</h1> 
-             <h2>2 👥</h2>
-             <p style="padding-left:10px; padding-right:10px;"> A very small project made during a 2 week period. This project was created with hopes of pitching at the Swedish Game Conference 2023.</p>
-             <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
-             <p style="text-align:left; padding-left:10px;"> • Ship Building system</p>
-             <p style="text-align:left; padding-left:10px;"> • Load unique Enemies from Json file</p>
-       </div>
-    </div>
+<div class="card 3" onclick="redirectTo('Caviar.html')">
+  <img src="images/RainRunner.png">
+  <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
+  <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
+  <div class="overlay-text">
+      <h1>Rain Runner</h1> 
+       <h2>Colaboration 👥</h2>
+       <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
+       <p style="text-align:left; padding-left:10px;"> • Steam Leaderboard</p>
+ </div>
+</div>
 
-    <div class="card 1" onclick="redirectTo('overdosed.html')">
-        <img src="images/image3.png">
-        <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
-
-        <div class="overlay-text">
-            <h1>Overdosed</h1> 
-             <h2>13 👥</h2>
-             <p style="padding-left:10px; padding-right:10px;"> This project was made during a 3 week period for FutureGames Game Project 1. Our teams theme was "Biomedical builders".</p>
-             <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
-             <p style="text-align:left; padding-left:10px;"> • Player Movement</p>
-             <p style="text-align:left; padding-left:10px;"> • All the UI</p>
-       </div>
-    </div>
-
-    <div class="card 1" onclick="redirectTo('islandproject.html')">
-        <img src="images/image4.png">
-        <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
-        <img class="overlay-image-available" src="images/github_logo.png" alt="Overlay Image 1">
-
-        <div class="overlay-text">
-            <h1>Island Generation</h1> 
-             <h2>1 👥</h2>
-             <p style="padding-left:10px; padding-right:10px;"> This is a Procedural Island Generation system. When making this project I decided to look into Addressables and base the generation on overlaying Perlin-noises.</p>
-             <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
-             <p style="text-align:left; padding-left:10px;"> • Literally everything
-       </div>
-    </div>
-    
     <div class="card 5">
         <img src="images/pitchBlack.png">
         
