Feature : Added Day8, and exchanged the video.

--- a/caviar.html
+++ b/caviar.html
@@ -55,7 +55,7 @@
 
                 <div class="smallContainer" opacity>
                     <div class="video" opacity>
-                      <iframe width="100%" height="90%"src="https://www.youtube.com/embed/cC9r0jHF-Fw?si=VIh5Ad15c9u94ALk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <iframe width="100%" height="90%" src="https://www.youtube.com/embed/rxnmJRQE6Mk?si=XByC7Z6yu9EnNU9f" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <div class="text-under-video">
 
                       <div class="box-container">
@@ -114,6 +114,13 @@
                                 <p class="oswald-font"> I also finally started working on boids. Its extremely interesting and learning how to utilize "Weights" in this case the Cohesion, Seperation and Alignment feels very rewarding. To read more about this please refer to my "Boids" walk-through.</p>
                                 <div class="text-image">
                                     <img src="images/Caviar/Day7.png">
+                                </div>
+                                <div class="my-line"></div>
+
+                                <h2 class="oswald-font">Day 8</h2>
+                                <p class="oswald-font">I finally was able to restrict the players movement area by clamping the poisiton of the player within a sphere. I also spent some time and made a ascript that dynamically places fences based on how big this area is as seen below.</p>
+                                <div class="text-image">
+                                    <img src="images/Caviar/Day8.gif">
                                 </div>
                                 <div class="my-line"></div>
 
